2009-02-04  Vincent Untz  <vuntz@gnome.org>

	* src/baobab-chart.c: (baobab_chart_get_pixbuf),
	(baobab_chart_get_summary_mode), (baobab_chart_is_frozen),
	(baobab_chart_get_highlighted_item): use g_return_val_if_fail instead
	of g_return_if_fail. Part of bug #570422.

2009-01-27  Fabio Marzocca  <thesaltydog@gmail.com>

	* AUTHORS:
	* src/callbacks.c: (on_about_activate):
	Updated authors

2009-01-15  Fabio Marzocca  <thesaltydog@gmail.com>

	* src/baobab.c: (start_proc_on_command_line):
	Crash with segfault when trying to performe "scan folder" 
	on a partition which is NOT included in "folders to scan"
	(#567834)
	
2008-12-03  Cosimo Cecchi  <cosimoc@gnome.org>

	* src/baobab-cell-renderer-progress.h:
	* src/baobab-chart.h:
	* src/baobab-remote-connect-dialog.h:
	* src/gedit-spinner.c:
	* src/gedit-spinner.h:
	Use single GTK+ includes. Patch by Maxim Ermilov (#561257).

2008-11-22  Fabio Marzocca  <thesaltydog@gmail.com>

	* src/baobab-prefs.c: (check_toggled):
	Now root partition cannot be unselected.


2008-11-22  Paolo Borelli  <pborelli@katamail.com>

	* src/baobab.c:
	Fix excluded locations sanity check.
	(#560476)	
	
2008-11-22  Paolo Borelli  <pborelli@katamail.com>

	* src/baobab.c: (baobab_is_excluded_location):
	Fix logic bug that made it return always FALSE.

2008-10-26  Cosimo Cecchi  <cosimoc@gnome.org>

        * src/baobab-utils.c:
        (baobab_help_display):
        Plug a mem leak.

2008-10-26  Cosimo Cecchi  <cosimoc@gnome.org>

        * src/Makefile.am:
        * src/baobab-mount-operation.c: Removed.
        * src/baobab-mount-operation.h: Removed.
        * src/baobab-remote-connect-dialog.c:
        (connect_server_dialog_present_uri):
        * src/baobab-utils.c:
        (baobab_help_display):
        * src/baobab.c:
        (main):
	Drop libgnome dependency (#557264).

2008-10-26  Fabio Marzocca  <thesaltydog@gmail.com>

	* src/baobab-scan.c:
	* src/baobab-scan.h:
	* src/baobab-utils.c: (baobab_check_dir), (is_virtual_filesystem):