@@ -1,3 +1,8 @@
+2009-03-08  Fabio Marzocca  <thesaltydog@gmail.com>
+
+	* src/baobab-prefs.c: (fill_props_model):
+	Do not show gvfs fuse filesystem in pref dialog (#574105)
+
 2009-02-04  Vincent Untz  <vuntz@gnome.org>
 
 	* src/baobab-chart.c: (baobab_chart_get_pixbuf),
